--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,15 @@
 <html>
 <head>
   <title>CapstoneProject</title>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <% if current_user %>
+    <script>window.current_user = <%= current_user.id %>; </script>
+  <% else %>
+    <script>window.current_user = undefined;</script>
+  <% end %>
 </head>
 <body>
 
