pushing everything for review

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,3 +90,8 @@ header .header-content {
   padding: 20px;
   display: inline-block;
 }
+
+.center-pills {
+  display: flex;
+  justify-content: center;
+}
