group search is no longer case sensitive

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,10 @@ header .header-content {
   color: white;
 }
 
+header .header-text {
+  font-family: Fondamento, cursive;
+}
+
 .group-header-content {
   position: absolute;
   color: white;
@@ -84,7 +88,7 @@ footer {
 }
 
 .groups-index {
-  width: 980px;
+  width: 950px;
   padding: 0px 0px 40px 0px;
 }
 
