changes font for titles in detail pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,14 @@
   text-shadow: 1px 1px #000000;
 }
 
+.tab-pane {
+  min-height: 520px;
+}
+
+.well h2 {
+  font-family: Fondamento, cursive;
+}
+
 h3 {
   font-family: 'Playfair Display', cursive;
 }
